--- a/tryingplot.Rmd
+++ b/tryingplot.Rmd
@@ -1,20 +1,16 @@
 ---
-title: "NEW HW3"
 output: html_document
 date: '2022-03-20'
 ---
 ---
-title: "HW3"
 output: html_document
 ---
-#第一題 
+#plot功能練習
 ```{r}
-
 plot(x = mtcars$hp, y = mtcars$mpg ,pch=16 , cex = 1.5,xlab = 'hp',ylab = 'mpg',col = ifelse(mtcars$wt<=2.5,'black', ifelse(mtcars$wt <= 3.5, 'red', 'green')))
 
 ```
-    
-#第二題  
+#quantmod使用方法之練習
 #因為檔案儲存在oneDrive所以library的warning字串Knit出來的時候會是亂碼,用RMD檔開會是正常的,
 執行起來也沒有任何問題!
 ```{r}
@@ -31,29 +27,17 @@ addADX()
 addRSI()
 ```
 
-#第三題  
+#把兩個方程式併成一個  
 #It is possible when y is global variable
 ```{r}
 y = 5
 f = function(x){x+2}
 g = function(x,s){x+s(y)}
 g(3,f)
-
-
-
-```
-
-#第四題
-```{r}
-a = 10:15
-x = 12:20
-intersect(a,x)
-x[match(a,x,nomatch = 0)]
-
 ```
 
 
-#第五題
+#資料處裡練習
 ```{r}
 a <- subset(esoph,alcgp=='80-119')
 nrow(a)
